# GodMode

./: .gitignore  ENV_EXAMPLE.txt  README.md  SPEC.md  SPEC_COMPLIANCE_CHECKLIST.md  TROUBLESHOOTING.md  WORKFLOW.md  pyproject.toml
config/: clean_run.yaml  default.yaml
prompts/: GPT52_AUDIT_TEMPLATE.md  OPUS_TASK_TEMPLATE.md
scripts/: analyze_deep_outputs.py  analyze_dtck.py  analyze_ecda.py  analyze_outputs.py  analyze_support_edge.py  analyze_touch_packets.py  check_candles.py  check_first_last_minute.py  check_report.py  check_stream.py  checklist_eval.py  compare_positive_patterns_sessions.py  compile_positive_patterns.py  compile_reports.py  debug_session_times.py  debug_stream.py  doctor.py  explore_session.py  full_minute_detail.py  inst_detail.py  list_positives.py  minute_breakdown.py  minute_detail.py  quick_analyze.py  resistance_eval.py  simple_totals.py  unified_eval.py
src/godmode/: __init__.py
src/godmode/cli/: main.py
tests/: test_smoke_imports.py
tests/integration/: test_commands_manual_level_and_marker.py  test_replay_end_to_end.py
tests/unit/: test_alpaca_provider_parsing.py  test_atr.py  test_bar_builder.py  test_episode_metrics.py  test_episode_state_machine.py  test_level_spine_features.py  test_microstructure_orderflow_features.py  test_polygon_export_time_parse.py  test_polygon_provider_parsing.py  test_replay_provider.py  test_ring_buffer.py  test_smart_money_features.py  test_snapshot_builder.py  test_storage_writer.py  test_volatility_ema_structure_features.py  test_vwap_ema.py  test_webapp_smoke.py  test_zone.py
(+59 files in other folders)
